--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,10 +1,16 @@
 .HeaderContainer {
     height: 5rem;
-    border: solid 2px blue;
   }
   .Header {
-      font-family: 'Raleway';
+      font-family: 'Raleway', serif;
       font-size: large;
       text-align: center;
     }
+
+  .SubHeader {
+      font-family: 'Raleway', serif;
+      font-size: x-small;
+      text-align: center;
+      color: darkgrey;
+  }
 
