Added file upload functionality and sending the file to the back end with a POST method

--- a/frontend/src/styles/UploadBox.css
+++ b/frontend/src/styles/UploadBox.css
@@ -26,3 +26,13 @@
     font-size: xx-small;
     text-align: center;
 }
+
+.UploadText{    
+    font-family: 'Raleway', serif;
+    font-size: x-small;
+    text-align: center;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
+}
