--- a/frontend/src/styles/UploadBox.css
+++ b/frontend/src/styles/UploadBox.css
@@ -5,6 +5,8 @@
     border: 1px solid black;
     background-color: white;
     height: 10rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .image {
@@ -35,4 +37,14 @@
     &:hover {
         text-decoration: underline;
     }
+}
+
+.ErrorMessage {
+    color: red;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: 1px solid red;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: auto;
 }
