--- a/frontend/src/styles/Carousel.css
+++ b/frontend/src/styles/Carousel.css
@@ -6,9 +6,9 @@
     height: 80vh;
     border: 2px solid #ddd; /* Add a border */
     border-radius: 10px; /* Optional: Add rounded corners */
-    
+    position: relative;
   }
-  
+
   .carousel-parent {
     position: relative;
     margin:0 auto;
@@ -18,11 +18,7 @@
     justify-content: center;
     align-items: center;
     }  
-  img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-  }
+
   
   button {
     margin: 0.5rem;
@@ -33,19 +29,85 @@
 
   .left-arrow {
     position: absolute;
+    top: 50%;
     left: 0; 
-    transform: translateY(-50%);
+    transform: translateY(1414%);
+    cursor: pointer;
   }
   
   .right-arrow {
     position: absolute;  
     right: 0;
-    transform: translateY(-50%);
+    transform: translateY(-20%);
+    cursor: pointer;
   }
 
   .download-button {
     position: absolute;  
-    left: 38%;
+    left: 40%;
     transform: translateX(-50%);
-    transform: translateY(-50%);
+    transform: translateY(-0%);
+    cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .download-all-button {
+    position: absolute;  
+    left: 40%;
+    transform: translateX(0%);
+    transform: translateY(90%);
+    cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
+  
+  .dot.active {
+    background-color: #717171;
+  }
+
+  .slide {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .slide.active {
+    opacity: 1;
+  }
+
+  @media (max-width: 768px) {
+    .carousel-parent {
+      width: 90%; /* Adjust the width for smaller screens */
+    }
+    .left-arrow {
+      font-size: 1.5em;
+    }
+    .right-arrow {
+      font-size: 1.5em;
+    }
+    .text-item {
+      width: 90%; /* Adjust the width for smaller screens */
+    }
   }
