--- a/frontend/src/styles/Carousel.css
+++ b/frontend/src/styles/Carousel.css
@@ -1,4 +1,5 @@
 .carousel-parent {
+  animation: fadeIn 1s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,4 +94,13 @@
 
 .dot.active {
   background-color: #007bff;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
