--- a/frontend/src/styles/Carousel.css
+++ b/frontend/src/styles/Carousel.css
@@ -1,4 +1,5 @@
 .carousel-parent {
+  margin-top: 120px;
   animation: fadeIn 1s ease-in-out;
   display: flex;
   justify-content: center;
@@ -76,7 +77,7 @@
   margin-top: 20px;
   width: 100%;
   position: absolute;
-  top: 300px;
+  bottom: 185px;
   left: 50%;
   transform: translateX(-50%);
 }
