--- a/frontend/src/styles/Carousel.css
+++ b/frontend/src/styles/Carousel.css
@@ -1,37 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 .carousel-parent {
   margin-top: 120px;
-  animation: fadeIn 1s ease-in-out;
+  font-family: Roboto Mono;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-}
-
-.carousel-parent:hover {
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  padding-top: 35px;
 }
 
 .text-item {
   margin: 0 20px;
-  padding: 20px;
-  background-color: #fff;
+  padding: 3rem;
+  height: 20rem;
+  width: 40rem;
+  background-color: rgb(247, 248, 250);
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+.edit-text-item{
+  margin: 0 20px;
+  padding: 3rem;
+  height: 20rem;
+  width: 40rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border: solid 2px #333;
   transition: box-shadow 0.3s ease;
 }
 
 .text-item:hover {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  cursor: pointer;
+}
+
+#card-title{
+  font-size: 1.2rem;
+  color: #333;
+  padding-bottom: 1rem;
+  border-bottom: solid 2px rgb(229, 229, 229);
+}
+#card-description{
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  padding-top: 0.5rem;
+  color: #333;
+  border-bottom: solid 2px rgb(229, 229, 229);
+}
+.card-criteria{
+  text-align: left;
+  font-weight: bold;
+  margin-bottom: 10px; 
+  color: #333;
+}
+.card-criteria ul{
+  font-weight: 400;
+  list-style-type:decimal;
 }
 
 .left-arrow,
 .right-arrow {
   cursor: pointer;
-  font-size: 2em;
+  font-size: 3em;
   color: #888;
   transition: color 0.3s ease;
 }
@@ -51,7 +84,7 @@
   text-align: center;
   transition: background-color 0.3s ease;
   position: absolute;
-  bottom: 10px;
+  bottom: 70px;
   left: 50%;
   transform: translateX(-50%);
 }
